[package]
name = "brontes-core"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parsing"
harness = false

[dependencies]
# Reth
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
#reth-revm.workspace = true
reth-interfaces.workspace = true
reth-metrics.workspace = true
reth-tracing-ext.workspace = true
ruint = { workspace = true, features = ["primitive-types", "rlp"] }
brontes-types.workspace = true
brontes-metrics.workspace = true
brontes-tracing.workspace = true
brontes-database.workspace = true

once_cell.workspace = true

# async

tokio = { workspace = true, features = ["full", "tracing"] }
futures.workspace = true
async-trait.workspace = true
malachite.workspace = true
# alloy
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi = { workspace = true, features = ["default"] }
alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }

# Serde 
serde.workspace = true
serde_json.workspace = true

# error handling
eyre.workspace = true
thiserror.workspace = true

# web
reqwest = { workspace = true, features = ["json"] }

# tracing
tracing = "0.1.37"
tracing-subscriber.workspace = true
colored.workspace = true

# misc
phf.workspace = true
lazy_static.workspace = true
auto_impl.workspace = true
dotenv.workspace = true
itertools.workspace = true

[dev-dependencies]
serial_test.workspace = true
brontes-core = { workspace = true, features = ["tests"] }
brontes-classifier = { workspace = true, features = ["tests"] }
dotenv.workspace = true
tokio.workspace = true
reth-tracing-ext.workspace = true
criterion = { version = "0.5", features = ["async", "async_tokio"] }


[build-dependencies]
rayon.workspace = true
walkdir = "2.4.0"
convert_case = "0.6.0"
quote = "1.0.35"
dotenv.workspace = true
brontes-database.workspace = true
serde.workspace = true
toml = "0.8.9"
brontes-types.workspace = true
alloy-primitives.workspace = true


[features]
default = []
dyn-decode = []
tests = []
local = []
