[package]
name = "brontes-core"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parsing"
harness = false

[dependencies]
# Reth
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
reth-interfaces.workspace = true
reth-metrics.workspace = true
reth-tracing-ext.workspace = true
ruint = { workspace = true, features = ["primitive-types", "rlp"] }
brontes-types.workspace = true
brontes-metrics.workspace = true
brontes-tracing.workspace = true
brontes-database.workspace = true

once_cell.workspace = true

# async

tokio = { workspace = true, features = ["full", "tracing"] }
futures.workspace = true
async-trait.workspace = true
malachite.workspace = true
# alloy
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi = { workspace = true, features = ["default"] }
alloy-provider.workspace = true
alloy-transport-http.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types = { workspace = true, features = ["jsonrpsee-types"] }

# Serde 
serde.workspace = true
serde_json.workspace = true

# error handling
eyre.workspace = true
thiserror.workspace = true

# web
reqwest = { workspace = true, features = ["json"] }

# tracing
tracing = "0.1.37"
tracing-subscriber.workspace = true
colored.workspace = true

# misc
phf.workspace = true
lazy_static.workspace = true
auto_impl.workspace = true
dotenv.workspace = true
itertools.workspace = true
indicatif.workspace = true
governor.workspace = true

[dev-dependencies]
serial_test.workspace = true
brontes-core = { workspace = true, features = ["tests"] }
brontes-classifier = { workspace = true, features = ["tests"] }
dotenv.workspace = true
tokio.workspace = true
reth-tracing-ext.workspace = true
criterion = { version = "0.5", features = ["async", "async_tokio"] }

[features]
default = []
dyn-decode = []
tests = []
local-reth = [
  "brontes-types/local-reth",
  "reth-tracing-ext/local-reth",
  "brontes-database/local-reth",
]
local-clickhouse = [
  "brontes-database/local-clickhouse",
  "reth-tracing-ext/local-clickhouse",
]

arbitrum = [
  "brontes-types/arbitrum"
]