[package]
name = "brontes-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# brontes
brontes-types.workspace = true

# reth
reth-primitives.workspace = true

# sorella-db
sorella-db-databases.workspace = true

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true

# numbers
malachite.workspace = true

# web
hyper-tls.workspace = true
hyper.workspace = true

# async
futures.workspace = true
tokio.workspace = true

# tracing
tracing.workspace = true

# misc
dotenv.workspace = true

[features]
test_run = []
tests = []