[package]
name = "brontes-database"
version = "0.1.0"
edition = "2021"

[dependencies]

# brontes
brontes-types.workspace = true
brontes-pricing.workspace = true
reth-tracing-ext.workspace = true

# alloy
alloy-primitives = { workspace = true, features = [
  "rand",
  "rlp",
  "arbitrary",
  "serde",
] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }


# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-libmdbx.workspace = true
reth-db.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true

# libmdbx deps
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
reth-codecs.workspace = true
codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
zstd = "0.13"


# numbers
malachite = { workspace = true, features = ["naturals_and_integers"] }

# sorella-db
sorella-db-databases = { git = "https://github.com/SorellaLabs/Database", rev = "fb9fa40", optional = true, features = ["test-utils"] }
sorella-db-types = { git = "https://github.com/SorellaLabs/Database", rev = "fb9fa40", optional = true }
clickhouse.workspace = true

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true


# async
futures.workspace = true
tokio.workspace = true
tokio-scoped = "0.2.0"


# web
hyper-tls.workspace = true
hyper.workspace = true


# tracing
tracing.workspace = true

# misc
eyre.workspace = true
parking_lot.workspace = true
dotenv.workspace = true
owned_chunks = "0.1.1"
bincode = "2.0.0-rc.3"
redefined.workspace = true
derive_more = "0.99.17"
paste = "1.0.14"
petgraph = "0.6.4"
itertools = "0.12.0"
rayon.workspace = true
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.73"
reqwest.workspace = true
toml = "0.8.9"

# benches
criterion = "0.5"
parquet = "50"
arrow = "50"
human_bytes = "0.4.3"
rkyv.workspace = true
auto_impl.workspace = true


reth-tasks = { workspace = true, optional = true }

[dev-dependencies]
serial_test.workspace = true
test-fuzz = "4"
async-trait.workspace = true
reth-tasks.workspace = true
brontes-core = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
brontes-pricing = { workspace = true, features = ["tests"] }
brontes-macros.workspace = true

[build-dependencies]
serde.workspace = true
toml = "0.8.9"
brontes-types.workspace = true
alloy-primitives.workspace = true

[features]
default = []
tests = ["reth-tasks", "brontes-pricing/tests"]
local-reth = [
  "brontes-core/local-reth",
  "reth-tracing-ext/local-reth",
  "brontes-types/local-reth",
]

local-clickhouse = ["sorella-db-databases", "sorella-db-types", "brontes-core/local-clickhouse"]
