[package]
name = "brontes-inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brontes-types.workspace = true
brontes-database.workspace = true
brontes-classifier.workspace = true

clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
hyper-tls = "0.5.0"
hyper.workspace = true
serde.workspace = true
async-trait.workspace = true

reth-primitives.workspace = true
reth-rpc-types.workspace = true
rayon.workspace = true
tracing.workspace = true
futures.workspace = true
tokio.workspace = true
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
itertools = "0.11.0"
# error handling
thiserror.workspace = true
auto_impl = "1.1.0"
# serde
serde_with = { version = "3.3.0", features = ["macros"] }

strum = { version = "0.25.0", features = ["derive"] }
lazy_static = "1.4.0"
# numbers
malachite.workspace = true

[features]
test_run = ["brontes-database/test_run"]
