[package]
name = "brontes-inspect"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "inspectors"
harness = false

[dependencies]
# brontes
brontes-types.workspace = true
brontes-database.workspace = true
brontes-metrics.workspace = true

# database
clickhouse.workspace = true

# web
hyper-tls.workspace = true
hyper.workspace = true

# alloy
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-rpc-types.workspace = true

reqwest.workspace = true
# async
async-trait.workspace = true
rayon.workspace = true
futures.workspace = true
tokio.workspace = true
async-scoped = { version = "0.7.1", features = ["use-tokio"] }

# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true

# tracing
tracing.workspace = true

# error handling
thiserror.workspace = true


# serde
serde_with = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true

# numbers
malachite.workspace = true

# misc
strum = { workspace = true, features = ["derive"] }
lazy_static.workspace = true
auto_impl.workspace = true
itertools.workspace = true
eyre.workspace = true
colored.workspace = true

brontes-core = { workspace = true, optional = true }
brontes-classifier = { workspace = true, optional = true }
brontes-pricing = { workspace = true, optional = true }
criterion = { version = "0.5", features = [
  "async",
  "async_tokio",
], optional = true }

[dev-dependencies]
dotenv.workspace = true
serial_test.workspace = true
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-core = { workspace = true, features = ["tests"] }
brontes-inspect = { workspace = true, features = ["tests"] }
brontes-pricing = { workspace = true, features = ["tests"] }
brontes-macros.workspace = true
tracing-subscriber.workspace = true
reth-db.workspace = true
brontes-types = { workspace = true, features = ["tests"] }
brontes-database.workspace = true
tokio.workspace = true
reth-tracing-ext.workspace = true
criterion = { version = "0.5" }
rand = "0.8.5"
statrs = "0.16"


[features]
sorella-server = ["local-reth", "local-clickhouse"]

tests = [
  "brontes-classifier/tests",
  "brontes-core/tests",
  "brontes-pricing/tests",
  "criterion",
]

local-reth = [
  "brontes-core/local-reth",
  "reth-tracing-ext/local-reth",
  "brontes-types/local-reth",
]

local-clickhouse = [
  "brontes-database/local-clickhouse",
  "brontes-core/local-clickhouse",
]

arbitrum = [
  "brontes-types/arbitrum"
]
