[package]
name = "brontes-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full"] }
quote = "1.0.33"
itertools = "0.11.0"
proc-macro2 = "1.0.78"

[features]
tests = []
