[package]
name = "brontes-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# poirot

# async
tokio = { workspace = true, features = ["full", "tracing"] }
futures.workspace = true
brontes-types.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
reth-metrics.workspace = true
alloy-primitives.workspace = true
reth-primitives.workspace = true
colored.workspace = true
reth-interfaces.workspace = true
# metrics
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
metrics-process.workspace = true
metrics.workspace = true
prometheus = "0.13.4"

db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", features = [
  "test-utils",
] }

clickhouse = { workspace = true, features = ["tls"] }
# errors
eyre.workspace = true

# http/rpc
hyper.workspace = true
dashmap = "5.5.3"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
tests = []
