[package]
name = "brontes-pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#brontes 
brontes-types.workspace = true

itertools = "0.12.0"

amms = { git = "https://github.com/darkforestry/amms-rs.git" }

futures.workspace = true
thiserror.workspace = true

# reth 
reth-rpc-types.workspace = true
reth-primitives.workspace = true

# tracing
tracing.workspace = true
# async
rayon.workspace = true
tokio = { workspace = true, features = ["full"] }

# numbers
malachite = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
parking_lot.workspace = true
petgraph = "0.6.4"
derive_more.workspace = true
ethers = "2.0.11"
async-trait.workspace = true
num-bigfloat = "1.7.0"
