[package]
name = "brontes-pricing"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "graph"
harness = false

[dependencies]
#brontes 
brontes-types.workspace = true

itertools = "0.12.0"

futures.workspace = true
thiserror.workspace = true

# reth 
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-codecs.workspace = true

# tracing
tracing.workspace = true
# async
rayon.workspace = true
tokio = { workspace = true, features = ["full"] }

# numbers
malachite = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true
alloy-rlp = { workspace = true, features = ["arrayvec"] }


# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-dyn-abi.workspace = true
parking_lot.workspace = true
petgraph = "0.6.4"
derive_more.workspace = true
ethers = "2.0.11"
async-trait.workspace = true
num-bigfloat = "1.7.0"
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
eyre.workspace = true

[dev-dependencies]
serial_test.workspace = true
brontes-core = { workspace = true, features = ["tests"] }
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-inspect.workspace = true
brontes-types.workspace = true
brontes-database.workspace = true
brontes-database-libmdbx.workspace = true
dotenv.workspace = true
tokio.workspace = true
reth-tracing-ext.workspace = true
criterion = { version = "0.5" }

[features]
uni-v3-ticks = []
