[package]
name = "brontes-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-logger = {version = "0.11", features = ["tracing","tracing-support"]}
