[package]
name = "brontes-types"
version = "0.1.0"
edition = "2021"


[dependencies]
# reth 
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-codecs.workspace = true


reth-db.workspace = true
async-trait.workspace = true
reth-interfaces.workspace = true
reth-rpc.workspace = true
# tracing
tracing.workspace = true

# async
rayon.workspace = true
tokio = { workspace = true, features = ["full"] }

# numbers
malachite = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true

# database
sorella-db-databases.workspace = true

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-rlp.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
dyn-clone = "1.0.16"
itertools.workspace = true

[build-dependencies]
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
serde.workspace = true
serde_json.workspace = true
reth-primitives.workspace = true
phf.workspace = true
phf_codegen.workspace = true
dotenv.workspace = true
sorella-db-databases.workspace = true


[dev-dependencies]
dotenv.workspace = true
tokio.workspace = true
serial_test.workspace = true
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-core = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
reth-tracing-ext.workspace = true


[features]
default = ["tests"]
tests = []
local = ["brontes-core/local"]
