[package]
name = "brontes-types"
version = "0.1.0"
edition = "2021"


[dependencies]
# reth 
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-codecs.workspace = true
reth-tasks.workspace = true
reth-db.workspace = true
async-trait.workspace = true
reth-interfaces.workspace = true
reth-rpc.workspace = true

# alloy
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-rpc-types.workspace = true

# tracing
tracing.workspace = true

# async
rayon.workspace = true
tokio = { workspace = true }
futures.workspace = true

# numbers
malachite = { workspace = true, features = ["enable_serde"] }
malachite-q = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true

# database
clickhouse = { workspace = true, features = ["tls"] }


# openapi
relays-openapi = { path = "./src/block_metadata/relays-openapi" }

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-rlp.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
dyn-clone = "1.0.16"
itertools.workspace = true
rkyv.workspace = true
redefined.workspace = true
bytes.workspace = true
colored.workspace = true
indoc = "2"
zstd = "0.13"
paste = "1.0.14"
pin-project = "1.1.4"
clap.workspace = true
brontes-macros.workspace = true
indicatif.workspace = true
hyper.workspace = true
prettytable-rs = "0.10"

# stats
statrs = "0.16"

# errors
eyre.workspace = true
thiserror.workspace = true
humansize = "2.1.3"


# hashing
ahash = "0.8.11"
once_cell = "1.19.0"
reqwest.workspace = true

[dev-dependencies]
dotenv.workspace = true
tokio.workspace = true
serial_test.workspace = true
brontes-macros.workspace = true
brontes-types = { workspace = true, features = ["tests", "test_pricing"] }
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-core = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
reth-tracing-ext.workspace = true




[features]
default = ["arbitrum"]
tests = []
test_pricing = []
arbitrum = [
  "brontes-classifier/arbitrum",
]

local-clickhouse = [
  "brontes-database/local-clickhouse",
  "brontes-classifier/local-clickhouse",
]

local-reth = [
  "brontes-core/local-reth",
  "brontes-classifier/local-reth",
  "reth-tracing-ext/local-reth",
]
