[package]
name = "poirot-classifer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poirot-types.workspace = true
alloy-dyn-abi.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
tracing.workspace = true
poirot-core.workspace = true
