[package]
name = "poirot-classifer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poirot-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-sol-types.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
tracing.workspace = true
poirot-core.workspace = true
hex-literal.workspace = true
serde_json.workspace = true

rayon = "1.7.0"
paste = "1.0.14"
