[package]
name = "poirot-classifer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poirot-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-sol-types.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
tracing.workspace = true
poirot-core.workspace = true
hex-literal.workspace = true
serde_json.workspace = true

rayon = "1.7.0"
paste = "1.0.14"
phf = { version = "0.11", default-features = false }

[build-dependencies]
tokio.workspace = true
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
hyper.workspace = true
hyper-tls = "0.5.0"
serde.workspace = true
serde_json.workspace = true
alloy-etherscan.workspace = true
alloy-json-abi.workspace = true
ethers-core.workspace = true
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
dotenv = "0.15.0"
