[package]
name = "poirot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks"}
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc"}
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api"}
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder"}
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types"}
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider"}
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool"}
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives"}
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db"}
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree"}
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm"}
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces"}

# tracing
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Async
tokio = { version = "1.28.2", features = ["full"] }

# Alloy
alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}

# Revm
revm-primitives = "1.1.2"


# Serde 
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# error handling
eyre = "0.6.8"
