[package]
name = "poirot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5"}
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5"}
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5"}
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5"}
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5"}
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5"}
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5"}
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5"}
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5"}
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}

# tracing
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Async
tokio = { version = "1.28.2", features = ["full"] }

# Alloy
alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}

# Ethers
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", package = "ethers-etherscan" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", package = "ethers-core" }
ethers = "2.0.0"
# Revm
revm-primitives = "1.1.2"

# Serde 
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# error handling
eyre = "0.6.8"

# env 
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
