[package]
name = "poirot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-types.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
reth-revm.workspace = true
reth-interfaces.workspace = true
reth-metrics.workspace = true
reth-tracing.workspace = true
ruint = { workspace = true, features = ["primitive-types", "rlp"] }
poirot-types.workspace =true

# tracing
tracing = "0.1.37"
metrics = "0.21.1"

# Async
tokio = { version = "1.28.2", features = ["full", "tracing"] }
lazy_static = "1.4.0"
futures = "0.3.28"

# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
alloy-etherscan.workspace = true


# Ethers
ethers-core.workspace = true
ethers.workspace = true

# Revm
revm-primitives = "1.1.2"

# Serde 
serde.workspace = true
serde_json.workspace = true

# error handling
eyre = "0.6.8"
colored = "2.0"
thiserror = "1.0.44"
# env 
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.18"
env_logger = "0.10.0"
phf = { version = "0.11", default-features = false }
