[package]
name = "poirot-inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
hyper-tls = "0.5.0"
hyper.workspace = true
serde.workspace = true
async-trait.workspace = true
poirot-types.workspace = true

# error handling
thiserror.workspace = true