[package]
name = "poirot-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# poirot

# async
tokio = { version = "1.28.2", features = ["full", "tracing"] }
futures = "0.3.28"

# tracing
tracing.workspace = true
reth-tracing.workspace = true
reth-metrics.workspace = true
reth-primitives.workspace = true
colored.workspace = true

# metrics
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
metrics-process.workspace = true
metrics = "0.21.1"

# errors
eyre.workspace = true

# http/rpc
hyper.workspace = true